...
				value={{ value: timeSlot, label: timeSlot }}
				onValueChange={(option) => {
					if (option) dispatch(setTimeSlot(option.value as TimeSlot));
				}}
			>
				<SelectTrigger
					testID="time-selector"
					className="border-0 border-transparent shadow-none outline-none focus:outline-none focus:ring-0 hover:bg-black/5 hover:scale-105 active:scale-[0.97] active:opacity-90 transition-all rounded-md bg-transparent h-auto px-2 py-1 min-w-0 pl-1 gap-3 relative"
					onPressIn={() => setIsTimePressed(true)}
					onPressOut={() => setIsTimePressed(false)}
				>
					<SelectValue
						className={`text-lg transition-colors duration-200 font-medium ${isTimePressed || isTimeOpen ? "text-primary" : "text-foreground"}`}
...
					insets={contentInsets}
					className="w-48 native:w-56"
				>
					<SelectGroup>
						{slots.map((slot) => (
							<SelectItem
								testID="time-slot-pick"
								key={slot}
								label={slot}
								value={slot}
							>
								<Text>{slot}</Text>
							</SelectItem>
...
