...
				{isLocating ? (
					<ActivityIndicator className="text-foreground" size="small" />
				) : (
					<MapPin className="text-foreground" size={26} />
				)}
				<TextInput
					testID="location-input"
					className="flex-1 text-2xl font-bold text-foreground outline-none py-2"
					value={locInput}
					onChangeText={setLocInput}
					onSubmitEditing={handleLocationSubmit}
					onFocus={() => setIsFocused(true)}
					onBlur={() => {
...
							</Text>
						</View>
					) : (
						<ScrollView keyboardShouldPersistTaps="handled">
							{data.map((item, index) => (
								<TouchableOpacity
									testID="location-suggestion-item"
									key={item.id}
									className={`p-4 flex-row items-start ${index < data.length - 1 ? "border-b border-border/50" : ""}`}
									onPress={() => handleSelectSuggestion(item)}
								>
									<MapPin
										className="text-muted-foreground mr-3 mt-0.5"
...
