import { Header } from "./Header";
import { Metrics } from "./Metrics";
import { Recommendation } from "./Recommendation";
import { Root } from "./Root";
import { Summary } from "./Summary";

export const ComparisonPanel = {
	Root,
	Header,
	Metrics,
	Recommendation,
	Summary,
};

export default ComparisonPanel;
