...
						value={selectedWeek}
						onValueChange={(val) =>
							actions.setSelectedWeek(val as "this" | "next")
						}
					>
						<TabsList className="flex-row">
							<TabsTrigger value="this" testID="tab-this-week">
								<UIText>This week</UIText>
							</TabsTrigger>
							<TabsTrigger value="next" testID="tab-next-week">
								<UIText>Next week</UIText>
							</TabsTrigger>
						</TabsList>
					</Tabs>
					<View className="flex-row items-center ml-3">
						<ChartConfigPopover />
...
