...
		>
			<Animated.Text style={[styles.text, animatedTextStyle]}>
				{title}
			</Animated.Text>
			<GestureDetector gesture={panGesture}>
				<Animated.View
					testID="slide-to-confirm-button"
					style={[
						styles.button,
						{
							width: BUTTON_SIZE,
							height: BUTTON_SIZE,
							borderRadius: BUTTON_SIZE / 2,
...
