...
		state: { status, isAttempting },
		actions: { submit },
	} = useLogin();

	return (
		<TouchableOpacity
			testID="login-button"
			onPress={submit}
			disabled={status === "loading"}
			activeOpacity={0.8}
		>
			<LinearGradient
				colors={[colors.red[500], colors.red[400]]}
...
