...
		0,
		Math.min(rectX, innerWidth - estimatedWidth),
	);
	const textX = clampedRectX + estimatedWidth / 2;

	return (
		<G testID="chart-scrubber-tooltip">
			<Line
				x1={x}
				x2={x}
				y1={0}
				y2={innerHeight}
				stroke={palette.zinc[300]}
...
